# haskell-programming

./: .editorconfig  .gitignore  README.md  readme.md  useful-stack-package-libraries.txt
ch02-hello-haskell/: Sample.hs  learn.hs
ch04-basic-datatypes/: GreetIfCool1.hs  GreetIfCool2.hs
ch05-types/: Arith3Broken.hs  Sing.hs  TypeKwonDo.hs
ch06-typeclasses/: EqInstances.hs
ch07-more-functional-patterns/: Arith4.hs
ch08-recursion/: WordNumber.hs
ch09-lists/: CaesarCipher.hs  CaesarCipherExercise.hs  FewMoreExercises.hs  ZippingExercises.hs
ch10-folding-lists/: DatabaseProcessing.hs  FewMoreExercises.hs
ch11-algebraic-datatypes/: AsPatternExercises.hs  BinaryTreeExercises.hs  DataTypeExercises.hs  VehicleExercises.hs  VigenereCipherExercise.hs
ch12-signaling-adversity/: BinaryTreeExercises.hs  NaturalNumberExercises.hs  SmallMaybeEitherExercises.hs  UnfoldIterateExercises.hs
ch13-building-projects/hangman/: hangman.cabal
ch13-building-projects/hangman/src/: GenerateWordList.hs  Main.hs  PlayTheGame.hs
ch14-testing/: ArbitraryInstances.hs
ch14-testing/morse/: morse.cabal
ch14-testing/morse/src/: Main.hs  Morse.hs
ch14-testing/morse/tests/: tests.hs  testsArbitrary.hs
ch15-monoid-semigroup/: MadLibsExercise.hs  MonoidAssocQuickCheck.hs  MonoidExercises.hs  MonoidQuickCheck.hs  MonoidStateExercises.hs  OptionalMonoidExercise.hs  Semigroup2Exercises.hs  SemigroupAssocQuickCheck.hs  SemigroupExercises.hs  SemigroupQuickCheckExercises.hs  readme.md
ch16-functor/: FunctorExercises.hs  FunctorQuickCheckExercises.hs  FunctorSamples.hs  ReplaceExperiment.hs  SampleFunctor.hs  readme.md
ch17-applicative/: ApplicativeCowSample.hs  ApplicativeExercises.hs  ApplicativePersonSamples.hs  ApplicativeReader.hs  ApplicativeSamples.hs  BadMonoidUsingCheckers.hs  ListApplicativeExercise.hs  ValidationApplicativeExercise.hs  ZipListApplicativeExercise.hs  readme.md
ch18-monad/: BadAndGoodMonadSample.hs  EitherMonadExercise.hs  KleisliCompositionSample.hs  MaybeMonadSample.hs  MonadComposition.hs  MonadCowSample.hs  MonadExercises.hs  MonadSamples.hs  readme.md
ch19-applying-structure/: ApplicativeHgrevSample.hs  ApplicativeUtilsSample.hs  FunctorAddUTCTimeSample.hs  FunctorTextUUIDSample.hs  MonoidScotty.hs  MonoidScottySample.hs
ch20-foldable/: FoldableExercises.hs  FoldableFunctionExercises.hs  readme.md
ch21-traversable/: SkiFreeExercises.hs  TraversableConcepts.hs  TraversableExercises.hs  readme.md  (+1 more)
(+120 files in other folders)
