name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Gio Cosmiano
maintainer:          giocosmiano@email.com
copyright:           2018, Gio Cosmiano
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  exposed-modules:     GenerateWordList
                     , PlayTheGame

--library
--  hs-source-dirs:      src
--  exposed-modules:     GenerateWordList
--                     , PlayTheGame
--  build-depends:       base >= 4.7 && < 5
--  default-language:    Haskell2010
